WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270945
Fix Mac Build after addition of reconfigureLayerContentHint.
https://bugs.webkit.org/show_bug.cgi?id=270945
Summary
Fix Mac Build after addition of reconfigureLayerContentHint.
Megan Gardner
Reported
2024-03-13 17:03:52 PDT
Fix Mac Build after addition of reconfigureLayerContentHint.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-13 17:04:26 PDT
<
rdar://problem/124563181
>
Megan Gardner
Comment 2
2024-03-13 17:05:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25857
EWS
Comment 3
2024-03-13 17:07:52 PDT
Committed
276055@main
(a1d782a450ec): <
https://commits.webkit.org/276055@main
> Reviewed commits have been landed. Closing PR #25857 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug