Fix Mac Build after addition of reconfigureLayerContentHint. https://bugs.webkit.org/show_bug.cgi?id=270945 rdar://124563181

Unreviewed build fix.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeInteractionRegionLayers.mm:
(WebKit::updateLayersForInteractionRegions):

Canonical link: https://commits.webkit.org/276055@main